--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,29 @@
             "namedChunks": true
           },
           "configurations": {
+            "pre-production": {
+              "baseHref": "/",
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "namedChunks": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "serviceWorker": true
+            },
             "production": {
               "baseHref": "/",
               "budgets": [
