--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "./schema.graphql"
+schema: "http://localhost:3000/shop-api"
 documents: "./src/app/**/*.graphql.ts"
 generates:
   ./src/app/common/generated-types.ts:
