--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "serve:ssr": "node dist/server/main.js",
     "build:ssr": "ng build --configuration=production && ng run reference-storefront:server:production",
     "build:ssr:docker": "ng build --configuration=production,docker && ng run reference-storefront:server:docker",
-
     "build:ssr:pre-production": "ng build --configuration=pre-production",
     "prerender": "ng run reference-storefront:prerender"
   },
@@ -38,12 +37,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@nguniversal/express-engine": "^15.0.0",
+    "@stripe/stripe-js": "^1.52.0",
     "@tailwindcss/forms": "^0.5.3",
     "apollo-angular": "^4.2.1",
     "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "express": "^4.15.2",
     "graphql": "^16.6.0",
+    "ngx-stripe": "^15.5.1",
     "photoswipe": "^5.3.4",
     "rxjs": "~6.6.3",
     "source-map-explorer": "^2.5.3",
